<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:elevation="4dp"
    android:outlineAmbientShadowColor="@color/cardBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/team_name_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@id/team_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/team_name"
            android:textAlignment="center"
            android:textColor="@color/cardBackground"
            android:textSize="25dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@id/team_name_wins_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/no_of_wins"
            android:textAlignment="center"
            android:textColor="@color/textColorYellow"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/wins"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/team_name_wins_text_view"
            app:layout_constraintTop_toBottomOf="@id/team_name_text_view"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@id/team_name_losses_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/no_of_loose"
            android:textColor="@color/textColorRed"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/team_name_losses_image_view"
            app:layout_constraintLeft_toRightOf="@id/team_name_losses_image_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/team_name_losses_image_view" />

        <ImageView
            android:id="@id/team_name_losses_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/losses"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintLeft_toRightOf="@id/team_name_wins_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_name_text_view"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>